# tgc-semantic-search-demo

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: example_tgc_article.html  example_tgc_search.json  test_scraper.py
tgc_semantic_search_demo/: scraper.py  search.py
