[tool.poetry]
name = "tgc-semantic-search-demo"
version = "0.1.0"
description = ""
authors = ["JHDeerin <2016deerinjo@gmail.com>"]
readme = "README.md"
packages = [{include = "tgc_semantic_search_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
